--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <nav class="nav">
-    <div class="brand"><a href="/index.html">BIN HAO ER • GAME DESIGN</a></div>
+    <div class="brand"><a href="/index.html">BIN HAO ER • GAME / LEVEL DESIGNER</a></div>
     <div class="nav-links">
       <a href="/index.html">Work</a> ·
       <a href="/about.html">About</a> ·
