--- a/index.html
+++ b/index.html
@@ -21,12 +21,7 @@
     </div>
   </nav>
 
-<header class="hero container">
-  <h1>Selected Work</h1>
-  <p>A compact set of prototypes, shipped games, and design experiments. Hover a tile to reveal the title.</p>
-</header>
-
-<section class="gallery">
+<section class="gallery" aria-label="Project gallery">
   <a class="tile" href="/project1.html">
     <img src="/assets/img/ph1.svg" alt="Project One" loading="lazy">
     <span class="caption">Project One — Penumbra (Stealth Platformer)</span>
