--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Home – Portfolio</title>
-<meta name="description" content="Game design portfolio of Bin Hao Er — selected works, experiments, and contact." />
+<meta name="description" content="Level design portfolio of Bin Hao Er — selected works, experiments, and contact." />
 <link rel="icon" href="/assets/img/ph1.svg">
 <meta property="og:title" content="Home – Portfolio" />
 <meta property="og:type" content="website" />
@@ -13,7 +13,7 @@
 </head>
 <body>
   <nav class="nav">
-    <div class="brand"><a href="/index.html">BIN HAO ER • GAME / LEVEL DESIGNER</a></div>
+    <div class="brand"><a href="/index.html">BIN HAO ER • ASPIRING LEVEL DESIGNER</a></div>
     <div class="nav-links">
       <a href="/index.html">Work</a> ·
       <a href="/about.html">About</a> ·
@@ -24,7 +24,7 @@
 <section class="gallery" aria-label="Project gallery">
   <a class="tile" href="/project1.html">
     <img src="/assets/img/ph1.svg" alt="Project One" loading="lazy">
-    <span class="caption">Project One — Penumbra (Stealth Platformer)</span>
+    <span class="caption">ESCAPE/ILLUSION - Source Engine</span>
   </a>
   <a class="tile" href="/project2.html">
     <img src="/assets/img/ph2.svg" alt="Project Two" loading="lazy">
